--- a/src/main/resources/templates/curvePoint/list.html
+++ b/src/main/resources/templates/curvePoint/list.html
@@ -10,14 +10,14 @@
 <div class="container">
 	<div class="row">
 		<div class="col-6">
-			<a href="/bidList/list">Bid List</a>&nbsp;|&nbsp;
-			<a href="/curvePoint/list">Curve Points</a>&nbsp;|&nbsp;
-			<a href="/rating/list">Ratings</a>&nbsp;|&nbsp;
-			<a href="/trade/list">Trade</a>&nbsp;|&nbsp;
-			<a href="/ruleName/list">Rule</a>
+			<a href="/bidListEntity/list">Bid List</a>&nbsp;|&nbsp;
+			<a href="/curvePointEntity/list">Curve Points</a>&nbsp;|&nbsp;
+			<a href="/ratingEntity/list">Ratings</a>&nbsp;|&nbsp;
+			<a href="/tradeEntity/list">Trade</a>&nbsp;|&nbsp;
+			<a href="/ruleNameEntity/list">Rule</a>
 		</div>
 		<div class="col-6 text-right">
-			Logged in user: <b th:inline="text"  class="user"> [[${#httpServletRequest.remoteUser}]] </b>
+			Logged in userEntity: <b th:inline="text"  class="userEntity"> [[${#httpServletRequest.remoteUser}]] </b>
 			<form th:action="@{/app-logout}" method="POST">
 				<input type="submit" value="Logout"/>
 			</form>
@@ -25,7 +25,7 @@
 	</div>
 	<div class="row"><h2>Curve Point List</h2></div>
 	<div class="row">
-		<a href="/curvePoint/add" class="btn btn-primary btn-sm">Add New</a>
+		<a href="/curvePointEntity/add" class="btn btn-primary btn-sm">Add New</a>
 		<table class="table table-bordered">
 			<thead>
 				<tr>
