--- a/src/main/resources/templates/ruleName/update.html
+++ b/src/main/resources/templates/ruleName/update.html
@@ -14,7 +14,7 @@
 	</div>
 
 	<div class="row">
-		<form action="#" th:action="@{/ruleName/update/{id}(id=${ruleName.id})}" th:object="${ruleName}" method="post" class="form-horizontal" style="width: 100%">
+		<form action="#" th:action="@{/ruleNameEntity/update/{id}(id=${ruleNameEntity.id})}" th:object="${ruleNameEntity}" method="post" class="form-horizontal" style="width: 100%">
 			<!--
 			TODO: Create a form to edit the values of RuleName, there are 2 buttons: Update data and Cancel to the RuleName
 			 -->
