--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -18,7 +18,7 @@
 	</div>
 	<div class="row"><h2>User List</h2></div>
 	<div class="row">
-		<a href="/user/add" class="btn btn-primary btn-sm">Add New</a>
+		<a href="/userEntity/add" class="btn btn-primary btn-sm">Add New</a>
 		<table class="table table-bordered">
 			<thead>
 				<tr>
@@ -30,14 +30,14 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="user : ${users}">
-					<td style="width: 10%" th:text="${user.id}"></td>
-					<td th:text="${user.fullname}"></td>
-					<td th:text="${user.username}"></td>
-					<td style="width: 25%" th:text="${user.role}"></td>
+				<tr th:each="userEntity : ${users}">
+					<td style="width: 10%" th:text="${userEntity.id}"></td>
+					<td th:text="${userEntity.fullname}"></td>
+					<td th:text="${userEntity.username}"></td>
+					<td style="width: 25%" th:text="${userEntity.role}"></td>
 					<td style="width: 15%" class="text-center">
-						<a th:href="@{/user/update/{id}(id=${user.id})}">Edit</a>&nbsp;|&nbsp;
-						<a th:href="@{/user/delete/{id}(id=${user.id})}">Delete</a>
+						<a th:href="@{/userEntity/update/{id}(id=${userEntity.id})}">Edit</a>&nbsp;|&nbsp;
+						<a th:href="@{/userEntity/delete/{id}(id=${userEntity.id})}">Delete</a>
 					</td>
 				</tr>
 			</tbody>
