--- a/src/main/resources/templates/curvePoint/list.html
+++ b/src/main/resources/templates/curvePoint/list.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" 
-	  xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://thymeleaf.org"
+      lang="en-us">
 <head>
-<meta charset="utf-8"/>
-<title>Home</title>
-<link rel="stylesheet" href="../../css/bootstrap.min.css" >
+    <meta charset="utf-8"/>
+    <title>Home</title>
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
-	<div class="row">
-		<div class="col-6">
-			<a href="/bidListEntity/list">Bid List</a>&nbsp;|&nbsp;
-			<a href="/curvePointEntity/list">Curve Points</a>&nbsp;|&nbsp;
-			<a href="/ratingEntity/list">Ratings</a>&nbsp;|&nbsp;
-			<a href="/tradeEntity/list">Trade</a>&nbsp;|&nbsp;
-			<a href="/ruleNameEntity/list">Rule</a>
-		</div>
-		<div class="col-6 text-right">
-			Logged in userEntity: <b th:inline="text"  class="userEntity"> [[${#httpServletRequest.remoteUser}]] </b>
-			<form th:action="@{/app-logout}" method="POST">
-				<input type="submit" value="Logout"/>
-			</form>
-		</div>
-	</div>
-	<div class="row"><h2>Curve Point List</h2></div>
-	<div class="row">
-		<a href="/curvePointEntity/add" class="btn btn-primary btn-sm">Add New</a>
-		<table class="table table-bordered">
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>CurvePointId</th>
-					<th>Term</th>
-					<th>Value</th>
-					<th>Action</th>
-				</tr>
-			</thead>
-			<tbody>
-			<!-- TODO: Show all CurvePoint to the table, the action column will have Edit & Delete buttons -->
-			</tbody>
-		</table>
-	</div>
+    <div class="row">
+        <div class="col-6">
+            <a href="/bidListEntity/list">Bid List</a>&nbsp;|&nbsp;
+            <a href="/curvePointEntity/list">Curve Points</a>&nbsp;|&nbsp;
+            <a href="/ratingEntity/list">Ratings</a>&nbsp;|&nbsp;
+            <a href="/tradeEntity/list">Trade</a>&nbsp;|&nbsp;
+            <a href="/ruleNameEntity/list">Rule</a>
+        </div>
+        <div class="col-6 text-right">
+            Logged in userEntity: <b th:inline="text" class="userEntity"> [[${#httpServletRequest.remoteUser}]] </b>
+            <form th:action="@{/app-logout}" method="POST">
+                <input type="submit" value="Logout"/>
+            </form>
+        </div>
+    </div>
+    <div class="row"><h2>Curve Point List</h2></div>
+    <div class="row">
+        <a href="/curvePointEntity/add" class="btn btn-primary btn-sm">Add New</a>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>CurvePointId</th>
+                <th>Term</th>
+                <th>Value</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <!-- TODO: Show all CurvePoint to the table, the action column will have Edit & Delete buttons -->
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
