--- a/src/main/resources/templates/ruleName/update.html
+++ b/src/main/resources/templates/ruleName/update.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://thymeleaf.org"
+      lang="en-us">
 <head>
-	<meta charset="utf-8"/>
-	<title>Home</title>
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" >
+    <meta charset="utf-8"/>
+    <title>Home</title>
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
 
-	<div class="row">
-		<h2>Update New Rule</h2>
-	</div>
+    <div class="row">
+        <h2>Update New Rule</h2>
+    </div>
 
-	<div class="row">
-		<form action="#" th:action="@{/ruleNameEntity/update/{id}(id=${ruleNameEntity.id})}" th:object="${ruleNameEntity}" method="post" class="form-horizontal" style="width: 100%">
-			<!--
-			TODO: Create a form to edit the values of RuleName, there are 2 buttons: Update data and Cancel to the RuleName
-			 -->
+    <div class="row">
+        <form action="#" th:action="@{/ruleNameEntity/update/{id}(id=${ruleNameEntity.id})}"
+              th:object="${ruleNameEntity}" method="post" class="form-horizontal" style="width: 100%">
+            <!--
+            TODO: Create a form to edit the values of RuleName, there are 2 buttons: Update data and Cancel to the RuleName
+             -->
 
-		</form>
-	</div>
+        </form>
+    </div>
 
 </div>
 </body>
