--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" 
-	  xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://thymeleaf.org"
+      lang="en-us">
 <head>
-<meta charset="utf-8"/>
-<title>Home</title>
-<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+    <meta charset="utf-8"/>
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
-	<div class="row">
-		<div class="col-6">
+    <div class="row">
+        <div class="col-6">
 
-		</div>
-		<div class="col-6 text-right">
-			<a href="/">Home</a>&nbsp;|&nbsp;<a href="/login">Login</a>
-		</div>
-	</div>
-	<div class="row"><h2>User List</h2></div>
-	<div class="row">
-		<a href="/userEntity/add" class="btn btn-primary btn-sm">Add New</a>
-		<table class="table table-bordered">
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>Full Name</th>
-					<th>User Name</th>
-					<th>Role</th>
-					<th>Action</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="userEntity : ${users}">
-					<td style="width: 10%" th:text="${userEntity.id}"></td>
-					<td th:text="${userEntity.fullname}"></td>
-					<td th:text="${userEntity.username}"></td>
-					<td style="width: 25%" th:text="${userEntity.role}"></td>
-					<td style="width: 15%" class="text-center">
-						<a th:href="@{/userEntity/update/{id}(id=${userEntity.id})}">Edit</a>&nbsp;|&nbsp;
-						<a th:href="@{/userEntity/delete/{id}(id=${userEntity.id})}">Delete</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+        </div>
+        <div class="col-6 text-right">
+            <a href="/">Home</a>&nbsp;|&nbsp;<a href="/login">Login</a>
+        </div>
+    </div>
+    <div class="row"><h2>User List</h2></div>
+    <div class="row">
+        <a href="/userEntity/add" class="btn btn-primary btn-sm">Add New</a>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Full Name</th>
+                <th>User Name</th>
+                <th>Role</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="userEntity : ${users}">
+                <td style="width: 10%" th:text="${userEntity.id}"></td>
+                <td th:text="${userEntity.fullname}"></td>
+                <td th:text="${userEntity.username}"></td>
+                <td style="width: 25%" th:text="${userEntity.role}"></td>
+                <td style="width: 15%" class="text-center">
+                    <a th:href="@{/userEntity/update/{id}(id=${userEntity.id})}">Edit</a>&nbsp;|&nbsp;
+                    <a th:href="@{/userEntity/delete/{id}(id=${userEntity.id})}">Delete</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
