--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,9 +13,11 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<h3> HOME PAGE </h3>
-<p>
-    <a href="/login">Login</a> or create one <a href="/userEntity/list">User management</a>
-</p>
+<div class="container-fluid p-3 bg-light">
+    <h3> HOME PAGE </h3>
+    <p>
+        <a href="/login">Login</a> or create a <a href="/user/add">new account</a>
+    </p>
+</div>
 </body>
 </html>
