--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -25,23 +25,23 @@
         <form action="#" th:action="@{/userEntity/validate}" th:object="${userEntity}" method="post"
               class="form-horizontal" style="width: 100%">
             <div class="form-group">
-                <label for="fullname" class="col-sm-2 control-label">Full Name</label>
+                <label for="fullName" class="col-sm-2 control-label">Full Name</label>
                 <div class="col-sm-10">
-                    <input type="text" th:field="*{fullname}" id="fullname" placeholder="Full Name" class="col-4">
-                    <p class="text-danger" th:if="${#fields.hasErrors('fullname')}" th:errors="*{fullname}"></p>
+                    <input type="text" th:field="*{fullName}" id="fullName" placeholder="fullName" class="col-4">
+                    <p class="text-danger" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}"></p>
                 </div>
             </div>
             <div class="form-group">
-                <label for="username" class="col-sm-2 control-label">User Name</label>
+                <label for="userName" class="col-sm-2 control-label">User Name</label>
                 <div class="col-sm-10">
-                    <input type="text" th:field="*{username}" id="username" placeholder="User Name" class="col-4">
-                    <p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+                    <input type="text" th:field="*{userName}" id="userName" placeholder="userName" class="col-4">
+                    <p class="text-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></p>
                 </div>
             </div>
             <div class="form-group">
                 <label for="password" class="col-sm-2 control-label">Password</label>
                 <div class="col-sm-10">
-                    <input type="password" th:field="*{password}" id="password" placeholder="Password" class="col-4">
+                    <input type="password" th:field="*{password}" id="password" placeholder="password" class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
                 </div>
             </div>
