--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://thymeleaf.org"
       lang="en-us">
 <head>
-    <title>Spring Boot</title>
+    <meta charset="utf-8"/>
+    <title>Poseidon - User Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -13,14 +13,14 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
 </head>
+
 <body>
-<h3>Access Denied Exception</h3>
-<div>
-    Logged in userEntity: <b th:inline="text" class="userEntity"> [[${#httpServletRequest.remoteUser}]] </b>
-    <form th:action="@{/app-logout}" method="POST">
-        <input type="submit" value="Logout"/>
-    </form>
+<div class="container-lg mt-5 pt-3 bg-light">
+
+    <div class="bg-success w-25 p-1 text-center m-auto">
+        <h1>Welcome to Poseidon App</h1>
+    </div>
 </div>
-<p class="error" th:text="${errorMsg}">Error</p>
+
 </body>
-</html>   
+</html>
