--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       lang="en-us">
 <head>
-    <title> Spring Boot </title>
+    <title>Poseidon - Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -13,11 +13,16 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container-fluid p-3 bg-light">
-    <h3> HOME PAGE </h3>
-    <p>
-        <a href="/login">Login</a> or create a <a href="/user/add">new account</a>
-    </p>
+<div class="container-lg p-3 bg-light">
+    <div class="bg-secondary w-100 p-1 text-center m-auto">
+        <h1>Poseidon</h1>
+    </div>
+    <div class="p-1 text-center">
+        <h2> HOME PAGE </h2>
+        <h4>
+            <a href="/login">Login</a> or create a <a href="/user/add">new account</a>
+        </h4>
+    </div>
 </div>
 </body>
 </html>
