--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://thymeleaf.org"
       lang="en-us">
 <head>
     <meta charset="utf-8"/>
@@ -15,10 +16,12 @@
 </head>
 
 <body>
-<div class="container-lg mt-5 pt-3 bg-light">
-
-    <div class="bg-success w-25 p-1 text-center m-auto">
-        <h1>Welcome to Poseidon App</h1>
+<div class="container-lg p-3 bg-light">
+    <div class="bg-secondary w-100 p-1 text-center m-auto">
+        <h1>Poseidon</h1>
+    </div>
+    <div class="p-1 text-center">
+        <h2>Welcome <span th:text="${username}"></span> to your home page</h2>
     </div>
 </div>
 
