--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
       xmlns:th="http://thymeleaf.org"
       lang="en-us">
 <head>
+    <meta charset="utf-8"/>
     <title>Poseidon - Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -22,6 +23,7 @@
     <div class="m-auto w-50">
 
         <div class="text-center">
+            <h2 class="p-1">Please Log in</h2>
             <h3 th:if="${loginError}" class="text-danger p-1">Wrong user or password</h3>
         </div>
 
