--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -4,7 +4,7 @@
       lang="en-us">
 <head>
     <meta charset="utf-8"/>
-    <title>Home</title>
+    <title>Poseidon - Add User</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -15,54 +15,70 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
+<div class="container-lg p-3 bg-light">
 
-    <div class="row">
-        <h2>Add New User</h2>
+    <div class="bg-secondary w-100 p-1 text-center m-auto">
+        <h1>Poseidon</h1>
     </div>
 
-    <div class="row">
-        <form action="#" th:action="@{/userEntity/validate}" th:object="${userEntity}" method="post"
-              class="form-horizontal" style="width: 100%">
-            <div class="form-group">
-                <label for="fullName" class="col-sm-2 control-label">Full Name</label>
-                <div class="col-sm-10">
-                    <input type="text" th:field="*{fullName}" id="fullName" placeholder="fullName" class="col-4">
+    <div class="m-auto w-50">
+
+        <div class="text-center">
+            <h2 class="p-1">Add New User</h2>
+            <h3 th:if="${wrongCreatedUser}" class="text-danger p-1">Username already exists - please choose a new
+                one</h3>
+        </div>
+
+        <div class="w-100 m-auto">
+
+            <form th:action="@{/user/add}" th:object="${userEntity}" method="post">
+
+                <div class="form-group">
+                    <label for="fullName" class="form-label">Full Name</label>
+                    <input type="text" th:field="*{fullName}" id="fullName" placeholder="fullName"
+                           class="form-control" autofocus="autofocus"/>
                     <p class="text-danger" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}"></p>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="userName" class="col-sm-2 control-label">User Name</label>
-                <div class="col-sm-10">
-                    <input type="text" th:field="*{userName}" id="userName" placeholder="userName" class="col-4">
+
+                <div class="form-group">
+                    <label for="userName" class="form-label">User Name</label>
+                    <input type="text" th:field="*{userName}" id="userName" placeholder="userName"
+                           class="form-control"/>
                     <p class="text-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></p>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" th:field="*{password}" id="password" placeholder="password" class="col-4">
+
+                <div class="form-group">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" th:field="*{password}" id="password" placeholder="password"
+                           class="form-control"/>
                     <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-2 control-label">Role</label>
-                <div class="col-sm-10">
-                    <label class="checkbox-inline"><input type="radio" th:field="*{role}" th:value="ADMIN">Admin</label>
-                    <label class="checkbox-inline"><input type="radio" th:field="*{role}" th:value="USER">User</label>
+
+                <div class="form-group">
+                    <label for="password" class="form-label me-3">Role</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" id="inlineRadio1" th:field="*{role}"
+                               th:value="ADMIN"/>
+                        <label class="form-check-label" for="inlineRadio1">Admin</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" id="inlineRadio2" th:field="*{role}"
+                               th:value="USER"/>
+                        <label class="form-check-label" for="inlineRadio2">User</label>
+                    </div>
                     <p class="text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></p>
+
                 </div>
-            </div>
 
-
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <a class="btn btn-danger btn-sm" href="/userEntity/list">Cancel</a>
-                    <input class="btn btn-primary btn-sm" type="submit" value="Add userEntity">
+                <div class="form-group">
+                    <div class="d-flex justify-content-between">
+                        <a class="btn btn-danger w-25" href="/">Cancel</a>
+                        <input class="btn btn-primary w-50" type="submit" value="Add User"/>
+                    </div>
                 </div>
-            </div>
 
-        </form>
+            </form>
+        </div>
     </div>
 
 </div>
