--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -21,6 +21,7 @@
         <h1>Poseidon</h1>
     </div>
     <div class="p-1 text-center">
+        <h3 th:if="${rightCreatedUser}" class="text-success p-1">your account has been successfully created !</h3>
         <h2>Welcome <span th:text="${username}"></span> to your home page</h2>
     </div>
 </div>
