--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+<!-- navbar -->
+<div th:replace="fragments/header :: header"></div>
+
 <div class="container-lg p-3 bg-light">
     <div class="bg-secondary w-100 p-1 text-center m-auto">
         <h1>Poseidon</h1>
