--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!--suppress HtmlRequiredTitleElement -->
+<!-- TODO : better way ? -->
+<!--suppress HtmlRequiredTitleElement, HtmlUnknownTarget -->
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://thymeleaf.org"
       lang="en-us">
