--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -4,7 +4,7 @@
       lang="en-us">
 <head>
     <meta charset="utf-8"/>
-    <title>Home</title>
+    <title>Poseidon - User list</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -15,20 +15,22 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-6">
+<!-- navbar -->
+<div th:replace="fragments/header :: header"></div>
 
-        </div>
-        <div class="col-6 text-right">
-            <a href="/">Home</a>&nbsp;|&nbsp;<a href="/login">Login</a>
-        </div>
+<div class="container-lg p-3 bg-light">
+    <div class="p-1 text-center">
+        <h2>User List</h2>
     </div>
-    <div class="row"><h2>User List</h2></div>
-    <div class="row">
-        <a href="/userEntity/add" class="btn btn-primary btn-sm">Add New</a>
-        <table class="table table-bordered">
-            <thead>
+
+    <div class="p-1 m-auto w-75">
+        <!--suppress HtmlUnknownTarget -->
+        <a href="/user/add" class="btn btn-primary w-100">Add New User</a>
+    </div>
+
+    <div class="p-1">
+        <table class="table table-bordered table-striped text-center m-0">
+            <thead class="bg-secondary text-white">
             <tr>
                 <th>Id</th>
                 <th>Full Name</th>
@@ -38,14 +40,14 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="userEntity : ${users}">
-                <td style="width: 10%" th:text="${userEntity.id}"></td>
-                <td th:text="${userEntity.fullname}"></td>
-                <td th:text="${userEntity.username}"></td>
-                <td style="width: 25%" th:text="${userEntity.role}"></td>
-                <td style="width: 15%" class="text-center">
-                    <a th:href="@{/userEntity/update/{id}(id=${userEntity.id})}">Edit</a>&nbsp;|&nbsp;
-                    <a th:href="@{/userEntity/delete/{id}(id=${userEntity.id})}">Delete</a>
+            <tr th:each="userEntity : ${userEntities}">
+                <td th:text="${userEntity.id}"></td>
+                <td th:text="${userEntity.fullName}"></td>
+                <td th:text="${userEntity.userName}"></td>
+                <td th:text="${userEntity.role}"></td>
+                <td class="text-center">
+                    <a th:href="@{/user/update/{id}(id=${userEntity.id})}">Edit</a>&nbsp;|&nbsp;
+                    <a th:href="@{/user/delete/{id}(id=${userEntity.id})}">Delete</a>
                 </td>
             </tr>
             </tbody>
