--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <!-- navbar -->
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="a.fragments/header :: header"></div>
 
 <div class="container-lg p-3 bg-light">
     <div class="p-1 text-center">
