--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -17,7 +17,7 @@
 
 <body>
 <!-- navbar -->
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="a.fragments/header :: header"></div>
 
 <div class="container-lg p-3 bg-light">
     <div class="p-1 text-center">
