--- a/src/main/resources/templates/a.fragments/header.html
+++ b/src/main/resources/templates/a.fragments/header.html
@@ -27,16 +27,16 @@
                 <a class="nav-link link-dark" href="/user/home">home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link-dark" href="/bidlist/list">bidList</a>
+                <a class="nav-link link-dark" href="/bid/list">bid</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link-dark" href="/curvepoint/list">curvePoint</a>
+                <a class="nav-link link-dark" href="/curve/list">curve</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link link-dark" href="/rating/list">rating</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link-dark" href="/rulename/list">ruleName</a>
+                <a class="nav-link link-dark" href="/rule/list">rule</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link link-dark" href="/trade/list">trade</a>
