--- a/src/main/resources/templates/curve/add.html
+++ b/src/main/resources/templates/curve/add.html
@@ -18,14 +18,14 @@
 <div class="container">
 
     <div class="row">
-        <h2>Add New Rule</h2>
+        <h2>Add New Curve Point</h2>
     </div>
 
     <div class="row">
-        <form action="#" th:action="@{/ruleNameEntity/validate}" th:object="${ruleNameEntity}" method="post"
+        <form action="#" th:action="@{/curveEntity/validate}" th:object="${curveEntity}" method="post"
               class="form-horizontal" style="width: 100%">
             <!--
-            TODO: Create a form to input the values of RuleName, there are 2 buttons: Save data and Cancel to the list RuleName
+            TODO: Create a form to input the values of CurvePoint, there are 2 buttons: Save data and Cancel to the list CurvePoint
              -->
 
         </form>
