--- a/src/main/resources/templates/bid/add.html
+++ b/src/main/resources/templates/bid/add.html
@@ -18,16 +18,15 @@
 <div class="container">
 
     <div class="row">
-        <h2>Add New Curve Point</h2>
+        <h2>Add New Bid</h2>
     </div>
 
     <div class="row">
-        <form action="#" th:action="@{/curvePointEntity/validate}" th:object="${curvePointEntity}" method="post"
+        <form action="#" th:action="@{/bidEntity/validate}" th:object="${bidEntity}" method="post"
               class="form-horizontal" style="width: 100%">
             <!--
-            TODO: Create a form to input the values of CurvePoint, there are 2 buttons: Save data and Cancel to the list CurvePoint
+            TODO: Create a form to input the values of Bid, there are 2 buttons: Save data and Cancel to the list Bid
              -->
-
         </form>
     </div>
 
