--- a/src/main/resources/templates/bid/update.html
+++ b/src/main/resources/templates/bid/update.html
@@ -17,14 +17,14 @@
 <body>
 <div class="container">
     <div class="row">
-        <h2>Update CurvePoint</h2>
+        <h2>Update Bid</h2>
     </div>
 
     <div class="row">
-        <form action="#" th:action="@{/curvePointEntity/update/{id}(id=${curvePointEntity.id})}"
-              th:object="${curvePointEntity}" method="post" class="form-horizontal" style="width: 100%">
+        <form action="#" th:action="@{/bidEntity/update/{id}(id=${bidEntity.bidListId})}"
+              th:object="${bidEntity}" method="post" class="form-horizontal" style="width: 100%">
             <!--
-            TODO: Create a form to edit the values of CurvePoint, there are 2 buttons: Update data and Cancel to the Curve Point
+            TODO: Create a form to edit the values of Bid, there are 2 buttons: Update data and Cancel to the list Bid
              -->
         </form>
     </div>
