--- a/src/main/resources/templates/rule/add.html
+++ b/src/main/resources/templates/rule/add.html
@@ -18,15 +18,16 @@
 <div class="container">
 
     <div class="row">
-        <h2>Add New Bid</h2>
+        <h2>Add New Rule</h2>
     </div>
 
     <div class="row">
-        <form action="#" th:action="@{/bidListEntity/validate}" th:object="${bidListEntity}" method="post"
+        <form action="#" th:action="@{/ruleEntity/validate}" th:object="${ruleEntity}" method="post"
               class="form-horizontal" style="width: 100%">
             <!--
-            TODO: Create a form to input the values of Bid, there are 2 buttons: Save data and Cancel to the list Bid
+            TODO: Create a form to input the values of RuleName, there are 2 buttons: Save data and Cancel to the list RuleName
              -->
+
         </form>
     </div>
 
