--- a/src/main/resources/templates/trade/list.html
+++ b/src/main/resources/templates/trade/list.html
@@ -18,11 +18,11 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
-            <a href="/bidListEntity/list">Bid List</a>&nbsp;|&nbsp;
-            <a href="/curvePointEntity/list">Curve Points</a>&nbsp;|&nbsp;
+            <a href="/bidEntity/list">Bid List</a>&nbsp;|&nbsp;
+            <a href="/curveEntity/list">Curve Points</a>&nbsp;|&nbsp;
             <a href="/ratingEntity/list">Ratings</a>&nbsp;|&nbsp;
             <a href="/tradeEntity/list">Trade</a>&nbsp;|&nbsp;
-            <a href="/ruleNameEntity/list">Rule</a>
+            <a href="/ruleEntity/list">Rule</a>
         </div>
         <div class="col-6 text-right">
             Logged in userEntity: <b th:inline="text" class="userEntity"> [[${#httpServletRequest.remoteUser}]] </b>
