--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
     <div class="p-1 text-center">
         <h2> HOME PAGE </h2>
         <h4>
-            <a href="/login">Login</a> or create a <a href="/user/add">new account</a>
+            <a href="/login">Login</a> or create a <a href="/create-account">new account</a>
         </h4>
     </div>
 </div>
