--- a/src/main/resources/templates/create-account.html
+++ b/src/main/resources/templates/create-account.html
@@ -4,7 +4,7 @@
       lang="en-us">
 <head>
     <meta charset="utf-8"/>
-    <title>Poseidon - User add</title>
+    <title>Poseidon - User create</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -15,22 +15,24 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<!-- navbar -->
-<div th:replace="a.fragments/header :: header"></div>
 
 <div class="container-lg p-3 bg-light">
+
+    <div class="bg-secondary w-100 p-1 text-center m-auto">
+        <h1>Poseidon</h1>
+    </div>
 
     <div class="m-auto w-50">
 
         <div class="text-center">
-            <h2 class="p-1">User Add</h2>
+            <h2 class="p-1">Create new User</h2>
             <h3 th:if="${wrongCreatedUser}" class="text-danger p-1">Username already exists - please choose a new
                 one</h3>
         </div>
 
         <div class="w-100 m-auto">
 
-            <form th:action="@{/user/add}" th:object="${userEntity}" method="post">
+            <form th:action="@{/create-account}" th:object="${userEntity}" method="post">
 
                 <div class="form-group p-1">
                     <label for="userName" class="form-label">userName</label>
@@ -56,16 +58,10 @@
                 <div class="form-group p-1">
                     <label for="inlineRadio1" class="form-label me-3">Role</label>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" id="inlineRadio1" th:field="*{role}"
-                               th:value="ADMIN"/>
-                        <label class="form-check-label" for="inlineRadio1">Admin</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" id="inlineRadio2" th:field="*{role}"
+                        <input class="form-check-input" type="radio" id="inlineRadio1" checked th:field="*{role}"
                                th:value="USER"/>
-                        <label class="form-check-label" for="inlineRadio2">User</label>
+                        <label class="form-check-label" for="inlineRadio1">User</label>
                     </div>
-                    <p class="text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></p>
                 </div>
 
                 <div class="form-group p-1">
