--- a/src/main/resources/templates/a.fragments/header.html
+++ b/src/main/resources/templates/a.fragments/header.html
@@ -42,7 +42,7 @@
                 <a class="nav-link link-dark" href="/trade/list">trade</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link-dark" href="/user/list">user</a>
+                <a class="nav-link link-dark" href="/user/head">user</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link link-dark" href="javascript: document.logoutForm.submit()">logoff</a>
