--- a/src/main/resources/templates/user/admin/add.html
+++ b/src/main/resources/templates/user/admin/add.html
@@ -4,7 +4,7 @@
       lang="en-us">
 <head>
     <meta charset="utf-8"/>
-    <title>Poseidon - User update</title>
+    <title>Poseidon - User add</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -23,38 +23,38 @@
     <div class="m-auto w-50">
 
         <div class="text-center">
-            <h2 class="p-1">Update User</h2>
-            <h3 th:if="${rightUpdatedUser}" class="text-success p-1">User has been successfully updated</h3>
+            <h2 class="p-1">User Add</h2>
+            <h3 th:if="${wrongCreatedUser}" class="text-danger p-1">Username already exists - please choose a new
+                one</h3>
         </div>
 
         <div class="w-100 m-auto">
 
-            <form th:action="@{/user/update/{id}(id=${userEntity.id})}" th:object="${userEntity}" method="post">
+            <form th:action="@{/user/admin/add}" th:object="${userEntity}" method="post">
 
-                <div class="form-group">
-                    <label for="fullName" class="form-label">Full Name</label>
-                    <input type="text" th:field="*{fullName}" id="fullName" placeholder="fullName"
-                           class="form-control" autofocus="autofocus"/>
-                    <p class="text-danger" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}"></p>
-                </div>
-
-                <div class="form-group">
-                    <label for="userName" class="form-label">User Name</label>
+                <div class="form-group p-1">
+                    <label for="userName" class="form-label">userName</label>
                     <input type="text" th:field="*{userName}" id="userName" placeholder="userName"
-                           class="form-control"/>
+                           class="form-control" autofocus="autofocus"/>
                     <p class="text-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></p>
                 </div>
 
-                <div class="form-group">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" th:field="*{password}" id="password"
-                           placeholder="new password (old one could be reenter)"
+                <div class="form-group p-1">
+                    <label for="fullName" class="form-label">fullName</label>
+                    <input type="text" th:field="*{fullName}" id="fullName" placeholder="fullName"
+                           class="form-control"/>
+                    <p class="text-danger" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}"></p>
+                </div>
+
+                <div class="form-group p-1">
+                    <label for="password" class="form-label">password</label>
+                    <input type="password" th:field="*{password}" id="password" placeholder="password"
                            class="form-control"/>
                     <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
                 </div>
 
-                <div class="form-group">
-                    <label for="password" class="form-label me-3">Role</label>
+                <div class="form-group p-1">
+                    <label for="inlineRadio1" class="form-label me-3">Role</label>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" id="inlineRadio1" th:field="*{role}"
                                th:value="ADMIN"/>
@@ -66,14 +66,12 @@
                         <label class="form-check-label" for="inlineRadio2">User</label>
                     </div>
                     <p class="text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></p>
-
                 </div>
 
-                <div class="form-group">
+                <div class="form-group p-1">
                     <div class="d-flex justify-content-between">
-                        <!--suppress HtmlUnknownTarget -->
-                        <a class="btn btn-danger w-25" href="/user/list">Cancel</a>
-                        <input class="btn btn-primary w-50" type="submit" value="Update User"/>
+                        <a class="btn btn-danger w-25" href="/user/admin/list">Cancel</a>
+                        <input class="btn btn-primary w-50" type="submit" value="Add User"/>
                     </div>
                 </div>
 
