--- a/src/main/resources/templates/rating/update.html
+++ b/src/main/resources/templates/rating/update.html
@@ -63,7 +63,8 @@
                 <div class="form-group p-1">
                     <div class="d-flex justify-content-between">
                         <!--suppress HtmlUnknownTarget -->
-                        <a class="btn btn-danger w-25" href="/rating/list">Cancel</a>
+                        <a th:if="${rightUpdatedRating}" class="btn btn-success w-25" href="/rating/list">Return</a>
+                        <a th:unless="${rightUpdatedRating}" class="btn btn-danger w-25" href="/rating/list">Cancel</a>
                         <input class="btn btn-primary w-50" type="submit" value="Update Rating"/>
                     </div>
                 </div>
