--- a/src/main/resources/templates/rule/update.html
+++ b/src/main/resources/templates/rule/update.html
@@ -76,7 +76,8 @@
                 <div class="form-group p-1">
                     <div class="d-flex justify-content-between">
                         <!--suppress HtmlUnknownTarget -->
-                        <a class="btn btn-danger w-25" href="/rule/list">Cancel</a>
+                        <a th:if="${rightUpdatedRule}" class="btn btn-success w-25" href="/rule/list">Return</a>
+                        <a th:unless="${rightUpdatedRule}" class="btn btn-danger w-25" href="/rule/list">Cancel</a>
                         <input class="btn btn-primary w-50" type="submit" value="Update Rule"/>
                     </div>
                 </div>
