--- a/src/main/resources/templates/trade/update.html
+++ b/src/main/resources/templates/trade/update.html
@@ -55,7 +55,8 @@
                 <div class="form-group p-1">
                     <div class="d-flex justify-content-between">
                         <!--suppress HtmlUnknownTarget -->
-                        <a class="btn btn-danger w-25" href="/trade/list">Cancel</a>
+                        <a th:if="${rightUpdatedTrade}" class="btn btn-success w-25" href="/trade/list">Return</a>
+                        <a th:unless="${rightUpdatedTrade}" class="btn btn-danger w-25" href="/trade/list">Cancel</a>
                         <input class="btn btn-primary w-50" type="submit" value="Update Trade"/>
                     </div>
                 </div>
