--- a/src/main/resources/templates/user/admin/update.html
+++ b/src/main/resources/templates/user/admin/update.html
@@ -71,7 +71,8 @@
                 <div class="form-group p-1">
                     <div class="d-flex justify-content-between">
                         <!--suppress HtmlUnknownTarget -->
-                        <a class="btn btn-danger w-25" href="/user/admin/list">Cancel</a>
+                        <a th:if="${rightUpdatedUser}" class="btn btn-success w-25" href="/user/admin/list">Return</a>
+                        <a th:unless="${rightUpdatedUser}" class="btn btn-danger w-25" href="/user/admin/list">Cancel</a>
                         <input class="btn btn-primary w-50" type="submit" value="Update User"/>
                     </div>
                 </div>
