--- a/src/main/resources/templates/curve/update.html
+++ b/src/main/resources/templates/curve/update.html
@@ -55,7 +55,8 @@
                 <div class="form-group p-1">
                     <div class="d-flex justify-content-between">
                         <!--suppress HtmlUnknownTarget -->
-                        <a class="btn btn-danger w-25" href="/curve/list">Cancel</a>
+                        <a th:if="${rightUpdatedCurve}" class="btn btn-success w-25" href="/curve/list">Return</a>
+                        <a th:unless="${rightUpdatedCurve}" class="btn btn-danger w-25" href="/curve/list">Cancel</a>
                         <input class="btn btn-primary w-50" type="submit" value="Update Curve"/>
                     </div>
                 </div>
